# softwareRasterization

./: .gitignore  CMakeLists.txt  README.md  dataInit.h  main.c
